reclassified some text-align css to avoid interfering with other css

--- a/static-files/css/interactive-project-shell/foundation-styles.css
+++ b/static-files/css/interactive-project-shell/foundation-styles.css
@@ -54,8 +54,8 @@ h1, h2, h3, h4, h5, h6 {margin: 0 0;}
 #data-container .lowercase {text-transform: lowercase;}
 #data-container .centered {text-align: center;}
 #data-container .underline {text-decoration: underline;}
-#data-container .right {text-align: right;}
-#data-container .left {text-align: left;}
+#data-container .right-align {text-align: right;}
+#data-container .left-align {text-align: left;}
 #data-container .italics {font-style: italic;}
 #data-container .data-instructions {font-size: 11px;}
 #data-container .story-headline {font-family: "proxima-nova-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight: 700; margin-bottom: 0}
